--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -32,6 +32,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements_dev.txt
+    - name: Check code with black
+      run: |
+        black swagger2locustio --check --config=setup.cfg
     - name: Lint with flake8
       run: |
         flake8 swagger2locustio --count --statistics
