add pylint config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [pylint]
-max-line-length = 120
-max-complexity = 10
+max-line-length=120
+max-complexity=10
+output-format=colorized
 [tool.black]
-line-length = 120
+line-length=120
