--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,12 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.4.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+
   - repo: local
     hooks:
       - id: black
@@ -13,7 +21,7 @@ repos:
         name: pylint
         stages: [commit]
         language: system
-        entry: pylint --rcfile=setup.cfg swagger2locustio
+        entry: pylint --load-plugins=pylint.extensions.mccabe --rcfile=setup.cfg swagger2locustio
         types: [python]
         pass_filenames: false
 
