--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.4.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -33,13 +33,13 @@ repos:
         types: [python]
         pass_filenames: false
 
-      - id: pytest
-        name: pytest
-        stages: [commit]
-        language: system
-        entry: pytest swagger2locustio/tests
-        types: [python]
-        pass_filenames: false
+      # - id: pytest
+      #   name: pytest
+      #   stages: [commit]
+      #   language: system
+      #   entry: pytest swagger2locustio/tests
+      #   types: [python]
+      #   pass_filenames: false
 
       - id: pytest-cov
         name: pytest
